# parasol-rust-template

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh
.github/workflows/: contracts.yml  rust.yml
app/: Cargo.toml  README.md
app/src/: main.rs
bindings/src/: bytes.rs  counter.rs  fhe.rs  lib.rs
contracts/: foundry.toml  remappings.txt
contracts/src/: Counter.sol
contracts/test/: Counter.t.sol
contracts/test/data/: private_key.pri  public_key.pub
